@@ -9,6 +9,8 @@ Month day, 2005 - 3.9.0
 ! FreeImage now uses libTIFF 3.8.0
 + [Petr Pytelka] added a raw FAX G3 format loader
 + [Herve Drolon] added support for most image types to FreeImage_Rescale
++ [Herve Drolon] added FreeImage_MakeThumbnail
++ [Herve Drolon] added support for 64-bit images to FreeImage_ConvertTo32Bits
 * [Carsten Klein] FreeImage_Dither and FreeImage_Threshold now work with palettized 8-bit dib
 * [Christophe Petit] fixed a bug in FreeImage_GetFIFFromFilenameU occuring with files without extension
 * [Leigh Brasington] fixed a bug in PluginGIF causing FreeImage not working on Win/98/ME
